--- a/index.html
+++ b/index.html
@@ -49,19 +49,14 @@
                 <!-- lg -->
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal px-1">
-                    <li><a>Item 1</a></li>
+                   
                     <li>
-                      <details>
-                        <summary>Demos</summary>
-                        <ul class="p-2">
-                          <li><a>Features</a></li>
-                          <li><a>Pricing</a></li>
-                          <li><a>Contact</a></li>
-                          <li><a ></a></li>
-                        </ul>
-                      </details>
+                      <a >Demos</a>
                     </li>
-                    <li><a>Item 3</a></li>
+                    <li><a>Features</a></li>
+                          <li><a>Pricing</a></li>
+                          <li><a >Pricing</a></li>
+                          <li><a>Contact</a></li>
                   </ul>
                 </div>
                 
