--- a/index.html
+++ b/index.html
@@ -66,6 +66,25 @@
                 </div>
               </div>
         </nav>
+
+        <section>
+            <div class="hero bg-base-200 min-h-screen">
+                <div class="hero-content flex-col lg:flex-row-reverse">
+                  <img
+                    src="./images/Mobile Screens.png"
+                    class="max-w-sm rounded-lg shadow-2xl" />
+                  <div>
+                    <h1 class="text-5xl font-bold">Manage Your
+                        business finance
+                        easily</h1>
+                    <p class="py-6">
+                        An enim nullam tempor sapien gravida donec enim ipsum porta justo  congue magna at pretium purus pretium ligula 
+                    </p>
+                    <button class="btn bg-[#5BC17F] text-gray-100">Start 14 Days Trial</button>
+                  </div>
+                </div>
+              </div>
+        </section>
     </header>
 </body>
 
