--- a/index.html
+++ b/index.html
@@ -1,13 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tea House</title>
+    <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
     <!-- Header Start -->
-    <header></header>
+    <header>
+        <!-- Theme Switcher Start -->
+      <div class="flex justify-end p-2">
+        <label class="flex cursor-pointer gap-2">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <circle cx="12" cy="12" r="5" />
+            <path
+              d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"
+            />
+          </svg>
+          <input type="checkbox" value="dark" class="toggle theme-controller" />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+          </svg>
+        </label>
+        <!-- Theme Switcher End -->
+      </div>
+      <!-- Hero Section Start -->
+      <div class="hero min-h-screen">
+        <div class="hero-content flex-col lg:flex-row">
+          <div>
+            <h1 class="text-6xl lg:text-7xl font-bold">
+              It's good <br class="hidden" />
+              tea time at The Tea House
+            </h1>
+            <p class="py-6 text-[#777777]">
+              Tea and Botanical Solutions Supplier Give Optimum <br />
+              Satisfaction To Your Taste Buds.
+            </p>
+            <button
+              class="btn text-white bg-gradient-to-r from-[#FF8938] to-[#FF0000]"
+            >
+              Explore More
+              <svg
+                width="24"
+                height="25"
+                viewBox="0 0 24 25"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M4.5 19.7788L19.5 4.77881M19.5 4.77881H8.25M19.5 4.77881V16.0288"
+                  stroke="white"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </button>
+          </div>
+          <img src="./images/banner.png" alt="banner" />
+        </div>
+      </div>
+      <!-- Hero Section End -->
+    </header>
     <!-- Header End -->
 
     <!-- Main Start -->
