[tea-house] - added featured products section in main.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <!-- Header Start -->
-    <header>
-        <!-- Theme Switcher Start -->
+    <header class="px-0 lg:px-20">
+      <!-- Theme Switcher Start -->
       <div class="flex justify-end p-2">
         <label class="flex cursor-pointer gap-2">
           <svg
@@ -86,7 +86,76 @@
     <!-- Header End -->
 
     <!-- Main Start -->
-    <main></main>
+    <main class="px-0 lg:px-28">
+      <!-- Featured Products Section Start -->
+      <section class="my-8">
+        <div class="text-center">
+          <h1 class="text-5xl lg:text-6xl font-bold">Our Featured Products</h1>
+          <p class="py-6 lg:px-[240px] text-[#777777]">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+        </div>
+        <div
+          class="grid grid-cols-1 lg:grid-cols-4 place-items-center gap-10 p-4"
+        >
+          <!-- Product-1 -->
+          <div
+            class="card w-96 lg:w-[100%] bg-gradient-to-b from-[#F4F4F4] to-[#f4f4f400]"
+          >
+            <figure class="px-10 pt-10">
+              <img src="./images/tea-1.png" alt="tea-1" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Milk Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+
+          <!-- Product-2 -->
+          <div
+            class="card w-96 lg:w-[100%] bg-gradient-to-b from-[#F4F4F4] to-[#f4f4f400]"
+          >
+            <figure class="px-10 pt-10">
+              <img src="./images/tea-2.png" alt="tea-2" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Black Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+
+          <!-- Product-3 -->
+          <div
+            class="card w-96 lg:w-[100%] bg-gradient-to-b from-[#F4F4F4] to-[#f4f4f400]"
+          >
+            <figure class="px-10 pt-10">
+              <img src="./images/tea-3.png" alt="tea-3" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Lemon Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+
+          <!-- Product-4 -->
+          <div
+            class="card w-96 lg:w-[100%] bg-gradient-to-b from-[#F4F4F4] to-[#f4f4f400]"
+          >
+            <figure class="px-10 pt-10">
+              <img src="./images/tea-4.png" alt="tea-4" class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title">Green Tea</h2>
+              <p>Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Featured Products Section End -->
+    </main>
     <!-- Main End -->
 
     <!-- Footer Start -->
