--- a/index.html
+++ b/index.html
@@ -155,6 +155,35 @@
         </div>
       </section>
       <!-- Featured Products Section End -->
+ 
+      <!-- Great Tea Section Start -->
+      <section>
+        <div class="hero  min-h-screen">
+          <div class="hero-content flex-col lg:flex-row">
+            <img src="./images/fresh.png" alt="fresh" class="" />
+            <div>
+              <h1 class="text-5xl font-bold">
+                Great Tea, Freshly <br />
+                Presented
+              </h1>
+              <p class="py-6 text-[#777777]">
+                The meaning of gong cha is chanese is to provide the best tea to
+                emperor from all possessions . It represents the highest quality
+                and self expectation. Establishing in 2006, Gong cha had been
+                deeply appreciated by its custoers because of good words of
+                mouth and unique customized service orginated from Taiwan.
+              </p>
+
+              <h2 class="font-bold">Unique Taste</h2>
+              <p class="py-6 text-[#777777]">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+              
+              <h2 class="font-bold">Premium Quality</h2>
+              <p class="class=py-6 text-[#777777]">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Great Tea Section End -->
     </main>
     <!-- Main End -->
 
